# nix_autobuild

./: .gitignore  Cargo.toml  README.md  Trunk.toml  autobuildModule.nix  config.json  example-config.json  flake.nix  index.html  styles.css
.devcontainer/: devcontainer.json
bindings/: autoBuildOptionsType.nix
src/: lib.rs  main.rs
src/backend/: mod.rs
src/common/: commit.rs  macros.rs  mod.rs  package.rs  repo.rs  serialize.rs
src/frontend/: mod.rs
